# euroavia

./: .gitignore  README.md  efficiencyMap.ino  tatus
Current Control/: ClassesAndFunctions.py  LowPassFilter.ipynb  acc.py  display_missionx.py  lowpass_filter_testing.ipynb  model_sym_test.py  myFunctions.py  new_test.py  run_and_simulate_response.py  send_files_remotely_command.txt  test_mpc.py  todo.txt  wind_run_and_sim_resp.py
Current Control/INTERRUPT_WORKING_CODE/: INTERRUPT_WORKING_CODE.ino
Current Control/adc_test/: adc_test.ino
Current Control/arduino_code/: arduino_code.ino
Current Control/data_collection/: convert_data_for_matlab.py  data_collection.ino  data_collection_interrupts.ino  resampling_data.py  running_and_saving_measurements.py  vis_only.py
Current Control/friday2601/: data.csv  data2.csv  data2.txt  friday2601.ino  myFunctions.py  visualise.py
Current Control/matlab/: current_sim.slxc  idprefs.mat  inputNonLinearity.m  (+7 more)
Current Control/pico/: CMakeLists.txt
Current Control/pico/src/: control.c  control.h  current.c  current.h  debug.c  debug.h  hermes.c  hermes.h  main.c  pwm_gen.c  pwm_gen.h  receiver.c  receiver.h
efficiency map/: ADS1115.ino  current.ino  current_bare.ino  sd_example_variableFilename.ino  voltage.ino
efficiencyMap/: comments - todos.txt  efficiencyMap.ino
efficiencyMap2.0/: efficiencyMap2.0.ino
telemetry/: Telemetry - wRFcontrol.ino  Telemetry - wSDnControl.ino  Telemetry.ino  readme.md
zeus_drone/: Makefile  mavlink.c  mavlink.h  s_bus.c  s_bus.h  telemetry.c  telemetry.h  zeus_mission  zeus_mission.c
(+321 files in other folders)
